# edscrape

./: .gitignore  README.md  pyproject.toml
edscrape/: __init__.py  api.py  cli.py  main.py  sso.py  user.py
