[tool.poetry]
name = "edscrape"
version = "0.1.0"
description = ""
authors = ["Daniel Endraws <daniel.endraws@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
requests = "^2.28.1"
pywebview = "^3.6.3"
pythonnet = {version = "2.5.2", platform = "win32"}
inquirerpy = "^0.3.4"

[tool.poetry.scripts]
edscrape = "edscrape.cli:main"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
